style.css
/* ... */
    .view__item_text:before {
      content: "+";
      position: absolute;
      bottom: 10px;
      right: 10px;
      display: inline-block;
      font-size: 25px;
      color: white; }

.video {
  width: 50%;
  position: relative; }
h4{
    font-size: 27.05px;
}
#video_button {
  position: absolute;
  font-size: 60px;
  opacity: 1;
  text-align: center;
  line-height: 65px;
  width: 65px;
  height: 65px;
  border-radius: 50%;
  background: url("assets/caret-right.svg") no-repeat center;
  background-color: #f5c506;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%); }

.view__item_social, .view__item_text {
  background-color: #ec9e03;
  width: 330px;
  height: 230px; }

.view__item_social {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  padding: 10px; }
  .view__item_social:after {
    content: "22";
    position: absolute;
    top: 20px;
    right: 20px;
    display: inline-block;
    font-size: 25px;
    color: white; }
  .view__item_social:before {
    content: "+";
    position: absolute;
    bottom: 10px;
    right: 10px;
    display: inline-block;
    font-size: 25px;
    color: white; }

.Free{
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}
.progress {
  background-color: #fae284;
  height: 15px;
  max-width: 60%;
  border-radius: 10px;
  margin: 120px auto 0; }

.progress__bar {
  width: 15%;
  background-color: #ec9e03;
  border-radius: 10px;
  height: 15px;
  margin-left: 30%; }

.data-box {
  display: inline-block;
  color: white;
  font-size: 38px;
  padding: 15px 25px 10px;
  background-color: #ddb101; }
/*----------------------------------different-----------------------------------*/
.different {
  background: url("assets/Layer 33.png") no-repeat;
  background-size: cover;
  padding-bottom: 50px; }
  .different h3 {
    padding: 50px 0;
    font-size: 43px;
    color: #f5c506;
    font-weight: 300;
    text-transform: uppercase;
    line-height: 1.2;
    text-align: center; }

.different__items_img {
  width: 80%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  position: relative; }
  .different__items_img:before {
    content: "its 100% free";
    font-family: "Asap Narrow";
    font-size: 16px;
    text-transform: uppercase;
    text-align: center;
    display: flex;
    justify-content: space-between;
    align-items: center;
    align-content: center;
    color: white;
    width: 115px;
    height: 115px;
    border-radius: 50%;
    background-color: #f5c506;
    position: absolute;
    top: -50px;
    left: -25px; }

.different__items_img img {
  align-self: center; }
  
.different__items_text {
  width: 30%; }

.different__items_text li {
  position: relative;
  word-wrap: break-word;
  font-size: 22px;
  color: #a9a9a7;
  line-height: 1.6;
  text-align: left;
  list-style: none; }
  .different__items_text li:before {
    content: "";
    width: 12px;
    height: 12px;
    border-radius: 12px;
    background-color: #f5c506;
    position: absolute;
    top: 12px;
    left: -10%; }

/*======================================footer=================================*/
.footer {
  background-color: #474747;
  color: white;
  padding: 20px 0;
  box-shadow: -2px 5px 15px 10px rgba(0, 0, 0, 0.7); }

  @media screen and (max-width: 1100px) {
    h4{
      font-size: 15px;
    }
    .videoposter{
      width: 200px;
      height: 200px;
    }
    .describtionPoster{
      font-size: 10px;
    }
    .TheCool{
      font-size:10px;
      text-align: left;
    }
    .TheMinimal{
      font-size: 10px;
      text-align: left;
    }
    .righthere{
      width: 25px;
      height: 25px;
      margin-top: 100px;
      margin-left: 0px;
    }
    .buttonleft{
      width: 25px;
      height: 25px;
      margin-top:100px;
      margin-left: 0px;
    }
    h1 > small {
      display: none; }
    .nav {
      width: 75%; }
    .view__item_social {
      display: none; }
    .view h3 {
      text-align: center; }
    .view__item {
      margin: 0 auto; }
    .data-box {
      display: block;
      margin: 0 auto;
      width: 150px;
      text-align: center; }
    .different__item_img {
      display: block;
      width: 50%; }
    .first, .second {
      padding: 10px;
      text-align: center; }
    .different__item_img:before {
      top: -25px;
      left: -25px; }
    .prev {
      left: -5%; }
    .next {
      right: -5%; } }
  
  @media screen and (max-width: 900px) {
    h4{
      font-size: 10px;
    }
    .videoposter{
      width: 200px;
      height: 200px;
    }
    .describtionPoster{
      font-size: 10px;
    }
    .TheCool{
      display: inline;
      font-size:10px;
      text-align: left;
    }
    .TheMinimal{
      display: inline;
      font-size: 10px;
      text-align: left;
    }
    .righthere{
      width: 25px;
      height: 25px;
      margin-top: 100px;
      margin-left: 0px;
    }
    .buttonleft{
      width: 25px;
      height: 25px;
      margin-top:100px;
      margin-left: 0px;
    }
    .nav a {
      padding: 3px 7px;
      color: #b99403;
      line-height: 1.5em; }
    .player h2 {
      font-size: 2.2em; } }
  
  @media screen and (max-width: 800px) {
    h4{
      font-size: 15px;
    }
    .videoposter{
      width: 200px;
      height: 200px;
    }
    .describtionPoster{
      font-size: 10px;
    }
    .TheCool{
      display: inline;
      font-size:10px;
      text-align: left;
    }
    .TheMinimal{
      display: inline;
      font-size: 10px;
      text-align: left;
    }
    .righthere{
      width: 25px;
      height: 25px;
      margin-top: 100px;
      margin-left: 0px;
    }
    .buttonleft{
      width: 25px;
      height: 25px;
      margin-top:100px;
      margin-left: 0px;
    }
    .different__items_img:before {
      width: 80px;
      height: 80px;
      top: -9%;
      left: -2%; }
    .different h3 {
      font-size: 32px; }
    .progress {
      margin-top: 40px; } }
/* ... */

